--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -7,3 +7,5 @@ build-std = ["core", "compiler_builtins"]
 [build]
 target = "x86_64.json"
 
+[target.'cfg(target_os = "none")']
+runner = "bootimage runner"
