--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,6 @@ version = "1.0"
 features = ["spin_no_std"]
 [package.metadata.bootimage]
 test-args = [
-    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
+    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"
 ]
 test-success-exit-code = 33
